syntax = "proto3";

option csharp_namespace = "Girvs.WebGrpcFrameWork.Service";
import "google/protobuf/empty.proto";

package cache;

service Cache{
	rpc GetKeys(.google.protobuf.Empty) returns(.cache.ResponseCacheKeysModel);
	rpc GetValueByKey(.cache.RequestCacheKeyModel) returns(.cache.ResponseCacheKeyValueModel);
	rpc RemoveByPrefix(.cache.RequestCachePrefixModel) returns(.google.protobuf.Empty);
	rpc RemoveByKey(.cache.RequestCacheKeyModel) returns(.google.protobuf.Empty);
}


message ResponseCacheKeysModel{
	repeated string key = 1;
}

message ResponseCacheKeyValueModel{
	string value = 1;
}

message RequestCacheKeyModel{
	string key = 1;
}

message RequestCachePrefixModel{
	string prefix = 1;
}